# look_tests

./: .gitignore  README.md  ideas.tex  requirements.txt
faceRecognition/: Dockerfile  Dockerfile.service  data  dataAnalysis.ipynb  differentImagesPerClass.txt  faceRecognition.py  faceRecognition2.py  functions.py  functions2.py  grid_search.py  image_resizer.py  main.py  occlude.py  presentation.ipynb  requirements.txt  server.py  test_mtcnn.py  testing_accuracy.py  webcam.py
faceRecognition/.ipynb_checkpoints/: presentation-checkpoint.ipynb
faceRecognition/UtilsFaceDetection/: .gitignore  .gitlab-ci.yml  README.md
faceRecognition/app/: faceRecognition.py  functions.py
faceRecognition/lib/: FaceAlign.py  FaceDetector.py  FaceDetectorHaar.py  Pipeline.py  mtcnn_detector.py
face_recognition_embeddings/: Dockerfile  accuracy_info.csv  grid_search.py  main.py  requirements.txt
face_recognition_embeddings/lib/: Pipeline.py
face_recognition_embeddings/models/: annoy1.ann  lof1.joblib  model.sav
face_recognition_sparseRep/: Dockerfile  functions.py  requirements.txt  server.py  testing_accuracy.py  webcam.py
face_recognition_sparseRep/lib/: Pipeline.py  mtcnn_detector.py
reports/: presentation.ipynb
reports/Ene2020/: ideas.aux  ideas.bbl  ideas.blg  ideas.dvi  ideas.fdb_latexmk  ideas.fls  ideas.tex  library.bib  report.aux  report.bbl  report.blg  report.dvi  report.tex
reports/Feb2020/: report_d12.md
tests/: Dockerfile  Untitled.ipynb  test1.py
tests/clanguage/: CMakeLists.txt  Dockerfile
tests/clanguage/src/: demo.cpp  example-app.cpp
(+53 files in other folders)
